--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "serenaredacretest",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Mohamad Siysinyuy Banbong - FS Developer - Deadline 13th May",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,9 @@
   },
   "homepage": "https://github.com/mrsuber/serenaRedAcreTest#readme",
   "dependencies": {
-    "create-react-app": "^5.0.1"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.2",
+    "nodemon": "^2.0.16"
   }
 }
